# trippy-albums-test

./: .gitignore  README.md  pyproject.toml
tests/: fixtures.py  test_clustering.py  test_eyes.py  test_geocoding.py  test_normalization.py  test_pipeline.py  test_saliency.py  test_scoring.py  test_selection.py  test_web.py
trippy/: cli.py  pipeline.py  types.py
trippy/clustering/: geo.py  moment_clustering.py  perceptual_hash.py  union_find.py
trippy/ingest/: exif.py  loader.py
trippy/models/: eye_state.onnx
trippy/scoring/: color.py  composition.py  exposure.py  eyes.py  faces.py  geocoding.py  normalization.py  quality.py  resolution.py  saliency.py  scenic.py  sharpness.py
trippy/selection/: diversity.py  representatives.py
trippy/web/: app.py
trippy/web/templates/: index.html  results.html
