[project]
name = "trippy"
version = "0.1.0"
description = "Local, deterministic engine that curates the best ~N moments from a folder of trip photos"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0",
    "numpy>=1.26",
    "exifread>=3.0",
    "onnxruntime>=1.16",
    "click>=8.1",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "piexif>=1.1"]

[project.scripts]
trippy = "trippy.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trippy*"]

[tool.setuptools.package-data]
trippy = ["models/*.onnx", "web/templates/*.html"]
